# rd_vio

./: CMakeLists.txt  README.md
configs/: advio_sensor.yaml  setting.yaml
examples/: CMakeLists.txt  dataset.hpp  euroc.cpp  pviz.hpp  test_advio.cpp  test_euroc.cpp
src/: CMakeLists.txt
src/rdvio/: CMakeLists.txt
src/rdvio/include/rdvio/: feature_tracker.h  frontend.h  handler.h  initializer.h  rdvio.hpp  sliding_window_tracker.h  types.h
src/rdvio/src/: config.cpp  feature_tracker.cpp  frontend.cpp  handler.cpp  initializer.cpp  sliding_window_tracker.cpp
src/rdvio_estimation/: CMakeLists.txt
src/rdvio_estimation/include/rdvio/estimation/: marginalization_factor.h  preintegration_factor.h  preintegrator.h  reprojection_factor.h  rotation_factor.h  solver.h  state.h
src/rdvio_estimation/include/rdvio/estimation/ceres/: marginalization_factor.h  preintegration_factor.h  quaternion_parameterization.h  reprojection_factor.h  rotation_factor.h
src/rdvio_estimation/src/: preintegrator.cpp  solver.cpp
src/rdvio_extra/: CMakeLists.txt
src/rdvio_extra/include/rdvio/extra/: image_undistorter.h  opencv_image.h  poisson_disk_filter.h  yaml_config.h
src/rdvio_extra/src/: opencv_image.cpp  yaml_config.cpp
src/rdvio_geometry/: CMakeLists.txt
src/rdvio_geometry/include/rdvio/geometry/: essential.h  homography.h  lie_algebra.h  pnp.h  stereo.h  wahba.h
src/rdvio_geometry/src/: essential.cpp  homography.cpp  lie_algebra.cpp  stereo.cpp
src/rdvio_map/: CMakeLists.txt
src/rdvio_map/include/rdvio/map/: frame.h  map.h  track.h
src/rdvio_map/src/: frame.cpp  map.cpp  track.cpp
src/rdvio_util/: CMakeLists.txt
src/rdvio_util/include/rdvio/util/: debug.h  identifiable.h  imu_parsac.h  logger.h  parsac.h  poisson_disk_filter.h  random.h  ransac.h  tag.h  unique_timer.h
src/rdvio_util/src/: debug.cpp
